--- a/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg justify-content-center gap-4">
+    <a class="order-sm-2 order-lg-1" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+    <a class="order-sm-3 order-lg-2">Agenda</a>
+    <img src="whiteLogo.svg" class="order-first order-lg-3" alt="" height="100px">
+    <a class="order-sm-4 order-lg-4">SOBRE</a>
+    <a class="order-sm-5 order-lg-5">LOGIN</a> 
+</nav>
