--- a/barber-shop-ui/src/app/Views/Shared/footer/footer.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class=" container text-light d-flex justify-content-between align-items-baseline mt-3 pb-3">
+    <span>© 2025 Barber Shop</span>
+    <div class="gap-2 d-flex">
+        <i class="bi bi-twitter-x"></i>
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-facebook"></i>
+    </div>
+</footer>
