--- a/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
@@ -3,5 +3,5 @@
     <a class="order-sm-3 order-lg-2" routerLink="/agenda" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Agenda</a>
     <img src="whiteLogo.svg" class="order-first order-lg-3" alt="" height="100px">
     <a class="order-sm-4 order-lg-4">SOBRE</a>
-    <a class="order-sm-5 order-lg-5">LOGIN</a> 
+    <a class="order-sm-5 order-lg-5" routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">LOGIN</a> 
 </nav>
