--- a/barber-shop-ui/src/app/Views/login/login.component.html
+++ b/barber-shop-ui/src/app/Views/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div class="container h-100 d-flex align-items-center">
+    <div class="row">
+        <div class="col-lg-7">
+            <img src="whiteLogo.svg" alt="" class="img-fluid">
+        </div>
+        <div class="col-lg-5 login-col py-5">
+            <h1 class="text-center text-light">Login</h1>
+            <form class="d-flex flex-column align-items-center" [formGroup]="loginForm">
+                <mat-form-field class="w-75 mat-form-field">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email" (blur)="updateErrorMessage()" required>
+                    @if(loginForm.invalid){
+                    <mat-error>{{errorMessage()}}</mat-error>
+                    }
+                </mat-form-field>
+                <mat-form-field class="w-75 mat-form-field">
+                    <mat-label>Senha</mat-label>
+                    <input matInput [type]="hide() ? 'password' : 'text'" formControlName="password">
+                    <button class="toggle-visibility" mat-icon-button matSuffix (click)="clickEvent($event)"
+                        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide()">
+                        <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                </mat-form-field>
+                <div class="d-flex justify-content-between align-items-center w-75">
+                    <button class="btn login-button" [disabled]="!loginForm.valid">Login</button>
+                    <a href="" class="recover-password">Esqueci a senha</a>
+                </div>
+            </form>
+            <div class="text-center my-5">
+                <a href="" class="register-anchor">Cadastre-se</a>
+            </div>
+        </div>
+    </div>
+</div>
