Feat: Add Register component and update routing for registration page

--- a/barber-shop-ui/src/app/Views/login/login.component.html
+++ b/barber-shop-ui/src/app/Views/login/login.component.html
@@ -27,7 +27,7 @@
                 </div>
             </form>
             <div class="text-center my-5">
-                <a href="" class="register-anchor">Cadastre-se</a>
+                <a routerLink="/cadastro" class="register-anchor">Cadastre-se</a>
             </div>
         </div>
     </div>
