Fix: Update registration component to link to login page and include RouterLink module

--- a/barber-shop-ui/src/app/Views/register/register.component.html
+++ b/barber-shop-ui/src/app/Views/register/register.component.html
@@ -26,7 +26,7 @@
                 </div>
             </form>
             <div class="text-center my-5">
-                <a routerLink="/cadastro" class="register-anchor">Já tem conta? Faça login</a>
+                <a routerLink="/login" class="register-anchor">Já tem conta? Faça login</a>
             </div>
         </div>
     </div>
