Feat: Add login submit handler to login button in login component

--- a/barber-shop-ui/src/app/Views/login/login.component.html
+++ b/barber-shop-ui/src/app/Views/login/login.component.html
@@ -22,7 +22,7 @@
                     </button>
                 </mat-form-field>
                 <div class="d-flex justify-content-between align-items-center w-75">
-                    <button class="btn login-button" [disabled]="!loginForm.valid">Login</button>
+                    <button class="btn login-button" [disabled]="!loginForm.valid" (click)="onLoginSubmit()">Login</button>
                     <a href="" class="recover-password">Esqueci a senha</a>
                 </div>
             </form>
