Chore: Update registration page layout

--- a/barber-shop-ui/src/app/Views/register/register.component.html
+++ b/barber-shop-ui/src/app/Views/register/register.component.html
@@ -1,7 +1,7 @@
-<div class="container h-100 d-flex align-items-center">
-    <div class="row">
-        <div class="col-lg-7">
-            <img src="whiteLogo.svg" alt="" class="img-fluid">
+<div class="container">
+    <div class="row pt-5">
+        <div class="col-lg-7 d-flex justify-content-center align-items-center pe-5">
+            <img src="whiteLogo.svg" alt="BarberShopLogo" class="img-fluid">
         </div>
         <div class="col-lg-5 login-col py-5">
             <h1 class="text-center text-light">Cadastro</h1>
