--- a/barber-shop-ui/src/app/Views/login/login.component.scss
+++ b/barber-shop-ui/src/app/Views/login/login.component.scss
@@ -39,7 +39,9 @@
         }
     }
 }
-
+.logo{
+    width: 30vw;
+}
 .mat-form-field {
     @include mat.form-field-overrides(( // Label
     filled-caret-color: white, // Cor do cursor (barra piscante)
