--- a/barber-shop-ui/src/app/Views/register/register.component.html
+++ b/barber-shop-ui/src/app/Views/register/register.component.html
@@ -3,26 +3,40 @@
         <div class="col-lg-7 d-flex justify-content-center align-items-center pe-5">
             <img src="whiteLogo.svg" alt="BarberShopLogo" class="img-fluid">
         </div>
-        <div class="col-lg-5 login-col py-5">
+        <div class="col-lg-5 login-col py-4">
             <h1 class="text-center text-light">Cadastro</h1>
+            <span class="text-white ms-5 ps-2">*Obrigatório</span >
             <form class="d-flex flex-column align-items-center" [formGroup]="registerForm">
                 <mat-form-field class="w-75 mat-form-field">
-                    <mat-label>Email</mat-label>
-                    <input matInput formControlName="email" (blur)="updateErrorMessage()" required>
-                    @if(registerForm.invalid){
-                    <mat-error>{{errorMessage()}}</mat-error>
+                    <mat-label>Nome</mat-label>
+                    <input matInput formControlName="name" (blur)="updateNameErrorMessage()" required>
+                    @if(registerForm.get('name')?.hasError('required')){
+                    <mat-hint>{{NameErrorMessage()}}</mat-hint>
                     }
                 </mat-form-field>
                 <mat-form-field class="w-75 mat-form-field">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email" (blur)="updateEmailErrorMessage()" required>
+                    @if(registerForm.invalid){
+                    <mat-hint>{{emailErrorMessage()}}</mat-hint>
+                    }
+                </mat-form-field>
+                <mat-form-field class="w-75 mat-form-field mb-3">
                     <mat-label>Senha</mat-label>
-                    <input matInput [type]="hide() ? 'password' : 'text'">
+                    <input matInput [type]="hide() ? 'password' : 'text'" (blur)="updatePasswordErrorMessage()"
+                        required>
                     <button class="toggle-visibility" mat-icon-button matSuffix (click)="clickEvent($event)"
                         [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide()">
                         <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
+                    @if(registerForm.invalid){
+                    <mat-hint>{{passwordErrorMessage()}}</mat-hint>
+                    }
+
                 </mat-form-field>
+
                 <div class="d-flex justify-content-between align-items-center w-75">
-                    <button class="btn login-button" [disabled]="!registerForm.valid">Login</button>
+                    <button class="btn login-button" [disabled]="!registerForm.valid">Cadastrar</button>
                 </div>
             </form>
             <div class="text-center my-5">
