--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.html
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.html
@@ -1,1 +1,14 @@
-<p>bookings works!</p>
+<div class="container text-center mt-3 p-3">
+    <h1>Meus Agendamentos</h1>
+    <div>
+        <mat-accordion class="accordion">
+            <mat-expansion-panel *ngFor="let booking of myBookings">
+              <mat-expansion-panel-header>
+                <mat-panel-title>{{booking.dayOfWeek}}</mat-panel-title>
+                <mat-panel-description> This is a summary of the content </mat-panel-description>
+              </mat-expansion-panel-header>
+              <p>This is the primary content of the panel.</p>
+            </mat-expansion-panel>
+          </mat-accordion>
+    </div>
+</div>
