--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.scss
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.scss
@@ -3,19 +3,40 @@
 .container {
     background-color: #242424;
 
-    >h1 {
+    .page-title {
         font-family: "Bebas Neue", serif;
         letter-spacing: .09rem;
         color: white;
     }
+    .new-booking-button{
+      letter-spacing: .09rem;
+        font-family: "Lobster", serif;
+        color: white;
+        border: 2px solid #dbb042;
+        border-radius: 0;
+        &:hover{
+          background-color: #dbb042;
+          color: #242424;
+        }
+    }
 }
 
-.accordion {
-    letter-spacing: .09rem;
-    @include mat.expansion-overrides((
-      container-background-color: rgb(24, 24, 24),
-      container-text-color: rgb(255, 255, 255),
-      header-text-font: ("Bebas Neue", serif),
-      container-text-line-height: (120px)
+.table-container {
+  th,td{
+    text-align: center;
+  }
+  @media (max-width: 768px) {
+    overflow-x: scroll;
+  }
+  @include mat.table-overrides((
+    background-color: rgb(24, 24, 24),
+    row-item-label-text-color: rgb(255, 255, 255),
+    header-headline-color: rgb(255, 255, 255),
+    header-headline-font: ("Bebas Neue", serif),
+    header-headline-size: 20px,
+    row-item-label-text-font: ("Lobster", serif),
+    row-item-outline-color: #dbb042,
+    header-headline-tracking: .2rem,
+    row-item-label-text-size: 18px
     ));
   }
