Fix: Remove unnecessary routerLinkActiveOptions from Agenda link in navbar

--- a/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg justify-content-center gap-4">
     <a class="order-1 order-md-0 order-lg-0" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
-    <a class="order-2 order-md-1 order-lg-1" routerLink="/agenda" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Agenda</a>
+    <a class="order-2 order-md-1 order-lg-1" routerLink="/agenda" routerLinkActive="active">Agenda</a>
     <img src="whiteLogo.svg" class="order-0 order-md-2 order-lg-2" alt="" height="100px">
     <a class="order-3 order-md-3 order-lg-3">SOBRE</a>
     <a class="order-4 order-md-4 order-lg-4" routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" *ngIf="userName == ''">LOGIN</a>
