--- a/barber-shop-ui/src/app/Views/booking-handler/booking-handler.component.html
+++ b/barber-shop-ui/src/app/Views/booking-handler/booking-handler.component.html
@@ -1,1 +1,59 @@
-<p>booking-handler works!</p>
+<div class="container p-3">
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-8 p-4 column">
+            <mat-stepper class="stepper" [linear]="!newBookingForm.value.time" [orientation]="'vertical'" #stepper>
+                <mat-step [stepControl]="newBookingForm">
+                    <form [formGroup]="newBookingForm">
+                        <ng-template matStepLabel>dia e horário</ng-template>
+                        <div class="d-flex gap-2 flex-wrap">
+                            <mat-form-field class="w-100">
+                                <mat-label>Dia</mat-label>
+                                <mat-select formControlName="workingDayId" (closed)="onChange()">
+                                    <mat-option [value]="workingDay.id"
+                                        *ngFor="let workingDay of workingDaysList; let index">{{workingDay.dayOfMonth |
+                                        date}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                            <mat-form-field class="w-100">
+                                <mat-label>Hora</mat-label>
+                                <mat-select formControlName="time">
+                                    <mat-option [value]="hour" *ngFor="let hour of availableHours, let index">{{hour |
+                                        time}}</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div>
+                            <button class="btn custom-btn" matStepperNext
+                                [disabled]="!newBookingForm.value.time">próximo</button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step [stepControl]="newBookingForm" label="Escolha o serviço">
+                    <form [formGroup]="newBookingForm">
+                        <mat-form-field class="w-100">
+                            <mat-label>Serviço</mat-label>
+                            <mat-select formControlName="serviceBShopId">
+                                <mat-option [value]="service.id" *ngFor="let service of servicesBShop">{{ service.name |
+                                    servicePrice: service.price}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <div class="d-flex gap-2">
+                            <button class="btn custom-btn" matStepperPrevious>voltar</button>
+                            <button class="btn custom-btn" matStepperNext
+                                [disabled]="!newBookingForm.value.serviceBShopId" (click)="postSubmit()">adicionar</button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step>
+                    <ng-template matStepLabel>Concluído</ng-template>
+                    <div class="mt-4"> 
+                        <p class="text-light">{{message}}</p>
+                        <button class="btn custom-btn" (click)="returnToBookings()">Voltar</button>
+                    </div>
+                    <div>
+                    </div>
+                </mat-step>
+            </mat-stepper>
+        </div>
+    </div>
+</div>
