--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.html
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.html
@@ -32,7 +32,7 @@
       <ng-container matColumnDef="options">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let element">
-          <button class="btn btn-outline-danger bi bi-trash rounded-0">Cancelar</button>
+          <button class="btn btn-outline-danger bi bi-trash rounded-0" (click)="deleteBooking(element.bookingId)">Cancelar</button>
         </td>
       </ng-container>
 
