--- a/barber-shop-ui/src/app/Views/home/home.component.html
+++ b/barber-shop-ui/src/app/Views/home/home.component.html
@@ -9,7 +9,7 @@
             <h1 class="fw-bold">Mais que uma barbearia, <br> uma experiência de estilo</h1>
             <h2 class="fs-4">Tradição, estilo e precisão em cada detalhe.</h2>
             <p>No nosso barber shop, cada corte é uma experiência que resgata a essência da barbearia clássica. Aqui, tradição e estilo se encontram para oferecer o melhor cuidado para sua barba e cabelo. Agende seu horário e sinta a diferença de um serviço feito com maestria!</p>
-            <button class="btn mt-3">Agende agora!</button>
+            <button class="btn mt-3" routerLink="/agenda/novo-agendamento">Agende agora!</button>
         </div>
     </div>
 </div>
