--- a/barber-shop-ui/src/app/Views/admin-bookings/admin-bookings.component.html
+++ b/barber-shop-ui/src/app/Views/admin-bookings/admin-bookings.component.html
@@ -1,6 +1,12 @@
 <div class="container mt-3 p-3">
-    <h1 class="page-title mb-0">Agendamentos</h1>
-    <div class="d-flex justify-content-between">
+    <div class="d-md-flex justify-content-md-between align-items-center text-center">
+        <h1 class="page-title mb-3 mb-md-0">Agendamentos</h1>
+        <mat-form-field appearance="outline">
+            <mat-label>Data</mat-label>
+            <input matInput [matDatepicker]="picker1" [formControl]="date" style="margin-bottom: 0 !important;" (dateChange)="this.fetchBookings()">
+            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
     </div>
     <div class="table-container mt-3" *ngIf="bookingsList.length > 0">
         <table mat-table class="mat-elevation-z8" [dataSource]="bookingsList">
@@ -9,9 +15,14 @@
                 <td mat-cell *matCellDef="let element"> {{element.serviceName}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="dayOfMonth">
+            <ng-container matColumnDef="dayOfWeek">
                 <th mat-header-cell *matHeaderCellDef>Dia</th>
                 <td mat-cell *matCellDef="let element"> {{element.dayOfWeek | dayOfWeekPipe }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef>Data</th>
+                <td mat-cell *matCellDef="let element">{{element.date | date:'dd/MM/YYYY' }}</td>
             </ng-container>
 
             <ng-container matColumnDef="time">
@@ -23,12 +34,16 @@
                 <th mat-header-cell *matHeaderCellDef>Preço</th>
                 <td mat-cell *matCellDef="let element"> {{element.price / 10 | currency: 'BRL' }} </td>
             </ng-container>
+            <ng-container matColumnDef="isDone">
+                <th mat-header-cell *matHeaderCellDef>Concluído</th>
+                <td mat-cell *matCellDef="let element" [ngStyle]="{'color': element.isDone ? 'green' : 'red'}"> {{element.isDone ? 'Sim': 'Não' }} </td>
+            </ng-container>
 
             <ng-container matColumnDef="options">
                 <th mat-header-cell *matHeaderCellDef>Ações</th>
                 <td mat-cell *matCellDef="let element" class="w-25">
                     <div class="d-flex gap-2 w-100 justify-content-center">
-                      <button class="btn rounded-0" (click)="deleteBooking(element.bookingId)">Finalizar</button>
+                      <button class="btn rounded-0" (click)="toggleSidebar(element)">Editar</button>
                     </div>
                   </td>
             </ng-container>
@@ -40,7 +55,8 @@
     <ng-container *ngIf="bookingsList.length === 0">
         <hr class="text-light">
         <div class="d-flex justify-content-center text-light p-4">
-            <h3>Nenhum agendamento encontrado</h3>
+            <h3>Você não possui agendamentos para hoje.</h3>
         </div>
     </ng-container>
 </div>
+<app-admin-sidebar [opened]="openSidebar" (fetchupdates)="fetchBookings()" (toggleEvent)="handleCloseSidebar()" [selectedItem]="selectedBooking" [mode]="sidebarMode"></app-admin-sidebar>
