--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.html
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.html
@@ -14,9 +14,13 @@
         <td mat-cell *matCellDef="let element"> {{element.serviceName}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="dayOfMonth">
+      <ng-container matColumnDef="dayOfWeek">
         <th mat-header-cell *matHeaderCellDef>Dia</th>
-        <td mat-cell *matCellDef="let element"> {{element.dayOfMonth | date:'dd/MM/yyyy'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.dayOfWeek | dayOfWeekPipe}} </td>
+      </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Data</th>
+        <td mat-cell *matCellDef="let element"> {{element.date | date:'dd/MM/yyyy'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="time">
