--- a/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           {{userName}}
         </button>
         <ul class="dropdown-menu">
-          <li><button class="dropdown-item" type="button" routerLink="area-restrita">Area restrita</button></li>
+          <li *ngIf="admin"><button class="dropdown-item" type="button" routerLink="area-restrita">Area restrita</button></li>
           <li><button class="dropdown-item" type="button" (click)="logout()">Sair</button></li>
         </ul>
       </div>
