--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.html
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.html
@@ -33,10 +33,17 @@
         <td mat-cell *matCellDef="let element"> {{element.price / 10 | currency: 'BRL' }} </td>
       </ng-container>
 
+      <ng-container matColumnDef="isDone">
+        <th mat-header-cell *matHeaderCellDef>Concluído</th>
+        <td mat-cell *matCellDef="let element" [ngStyle]="element.isDone ? {'color': 'green'} : {'color': 'red'}">
+          {{element.isDone ? 'Sim' : 'Não' }}</td>
+      </ng-container>
+
       <ng-container matColumnDef="options">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let element">
-          <button class="btn btn-outline-danger bi bi-trash rounded-0" (click)="deleteBooking(element.bookingId)">Cancelar</button>
+          <button class="btn btn-outline-danger bi bi-trash rounded-0"
+            (click)="deleteBooking(element.bookingId)">Cancelar</button>
         </td>
       </ng-container>
 
