feat: update layout structure and styles for improved responsiveness and aesthetics

--- a/barber-shop-ui/src/app/Views/bookings/bookings.component.scss
+++ b/barber-shop-ui/src/app/Views/bookings/bookings.component.scss
@@ -2,7 +2,7 @@
 
 .container {
     background-color: #242424;
-
+    border: #dbb042 1px solid;
     .page-title {
         font-family: "Bebas Neue", serif;
         letter-spacing: .09rem;
