--- a/barber-shop-ui/src/app/Views/home/home.component.html
+++ b/barber-shop-ui/src/app/Views/home/home.component.html
@@ -1,15 +1,19 @@
 <div class="container">
-    <div class="row mt-5 align-items-center">
+    <div class="row mt-5 d-flex align-items-center p-4">
         <!-- Imagem -->
-        <div class="col-lg-6 col-md-12 col-12 p-0 order-md-1 order-lg-1">
+        <div class="col-12 col-lg-6">
             <img src="/barberman.jpg" class="img-fluid w-100">
         </div>
         <!-- Texto -->
-        <div class="col-lg-6 col-md-12 col-12 text-light title p-md-4 p-3 order-md-2 order-lg-2">
-            <h1 class="fw-bold">Mais que uma barbearia, <br> uma experiência de estilo</h1>
-            <h2 class="fs-4">Tradição, estilo e precisão em cada detalhe.</h2>
-            <p>No nosso barber shop, cada corte é uma experiência que resgata a essência da barbearia clássica. Aqui, tradição e estilo se encontram para oferecer o melhor cuidado para sua barba e cabelo. Agende seu horário e sinta a diferença de um serviço feito com maestria!</p>
-            <button class="btn mt-3" routerLink="/agenda/novo-agendamento">Agende agora!</button>
+        <div class="col-12 col-lg-6 mt-3 text-white pb-3">
+            <h1 class="title mb-lg-3">Mais que uma barbearia, uma experiência de estilo</h1>
+            <h5 class=" mb-lg-4">Tradição, estilo e precisão em cada detalhe.</h5>
+            <p class="fs-6 fw-normal">No nosso barber shop, cada corte é uma experiência que resgata a essência da
+                barbearia
+                clássica.
+                Aqui, tradição e estilo se encontram para oferecer o melhor cuidado para sua barba e cabelo. Agende
+                seu horário e sinta a diferença de um serviço feito com maestria!</p>
+            <button class="btn mt-lg-4 mb-1" routerLink="/agenda/novo-agendamento">Agende agora!</button>
         </div>
     </div>
 </div>
