--- a/barber-shop-ui/src/app/Views/Shared/admin-navbar/admin-navbar.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/admin-navbar/admin-navbar.component.html
@@ -1,24 +1,28 @@
-<nav class="navbar navbar-expand-lg gap-4 d-flex justify-content-lg-center justify-content-evenly sticky-top z-1">
+<nav class="navbar navbar-expand-lg gap-4 d-flex justify-content-lg-center justify-content-evenly sticky-top">
     <div class="dropdown order-1 order-md-0 order-lg-0">
         <button class="dropdown-toggle show" type="button" data-bs-toggle="dropdown" aria-expanded="true">
             Menu
         </button>
         <ul class="dropdown-menu" #dropdown>
             <li>
-                <button class="dropdown-item" type="button" routerLink="agendamentos"
+                <button class="dropdown-item" type="button" routerLink="{{this.router.url.includes('area-restrita') ? 'agendamentos' : '/area-restrita/agendamentos'}}"
                     routerLinkActive="active">Agendamentos</button>
             </li>
             <li>
-                <button class="dropdown-item" type="button" routerLink="horarios-funcionamento"
+                <button class="dropdown-item" type="button" routerLink="{{this.router.url.includes('area-restrita') ? 'horarios-funcionamento' : '/area-restrita/horarios-funcionamento'}}"
                     routerLinkActive="active">Horário de funcionamento</button>
             </li>
             <li>
-                <button class="dropdown-item" type="button" routerLink="servicos"
+                <button class="dropdown-item" type="button" routerLink="{{this.router.url.includes('area-restrita') ? 'servicos' : '/area-restrita/servicos'}}"
                     routerLinkActive="active">Serviços</button>
             </li>
         </ul>
     </div>
-    <img src="whiteLogo.svg" class="order-0 order-md-2 order-lg-2" alt="" height="100px">
+    <div class="col-1">
+        <a routerLink="/home">
+            <img src="whiteLogo.svg" class="order-0 order-md-2 order-lg-2 img-fluid" alt="">
+        </a>
+    </div>
     <div class="dropdown order-4 order-md-4 order-lg-4">
         <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{userName}}
