--- a/barber-shop-ui/src/app/Views/Shared/footer/footer.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/footer/footer.component.html
@@ -1,8 +1,12 @@
-<footer class=" container text-light d-flex justify-content-between align-items-baseline mt-3 pb-3">
-    <span>© 2025 Barber Shop</span>
-    <div class="gap-2 d-flex">
-        <i class="bi bi-twitter-x"></i>
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-facebook"></i>
+<footer class="w-100">
+    <div class="container mb-2">
+        <div class="text-light d-flex align-items-center justify-content-between">
+            <span>© 2025 Barber Shop</span>
+            <div class="gap-2 d-flex">
+                <i class="bi bi-twitter-x"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-facebook"></i>
+            </div>
+        </div>
     </div>
 </footer>
