--- a/barber-shop-ui/src/app/Views/Shared/layout-admin/layout-admin.component.html
+++ b/barber-shop-ui/src/app/Views/Shared/layout-admin/layout-admin.component.html
@@ -1,3 +1,5 @@
 <app-admin-navbar></app-admin-navbar>
-<router-outlet></router-outlet>
+<main>
+    <router-outlet></router-outlet>
+</main>
 <app-footer></app-footer>
