--- a/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.scss
+++ b/barber-shop-ui/src/app/Views/Shared/navbar/navbar.component.scss
@@ -1,11 +1,9 @@
-.navbar {
-    >a {
-        text-decoration: none;
-        font-family: "Bebas Neue", serif;
-        font-size: 25px;
-        letter-spacing: .1rem;
-        color: white;
-    }
+a {
+    text-decoration: none;
+    font-family: "Bebas Neue", serif;
+    font-size: 25px;
+    letter-spacing: .1rem;
+    color: white;
 
     >a:hover {
         transition: ease-in-out .2s all;
@@ -19,39 +17,38 @@
         }
     }
 
-    >.dropdown {
+}
+.dropdown {
+    .dropdown-toggle {
+        font-family: "Bebas Neue", serif;
+        font-size: 25px;
+        letter-spacing: .1rem;
+        outline: none;
+        border: none;
+        background-color: rgba(0, 0, 0, 0);
+        color: white;
 
-        >.dropdown-toggle {
-            font-family: "Bebas Neue", serif;
-            font-size: 25px;
-            letter-spacing: .1rem;
-            outline: none;
-            border: none;
-            background-color: rgba(0, 0, 0, 0);
+        &:hover {
+            transition: ease-in-out .2s all;
+            color: #dbb042 !important;
+        }
+    }
+
+    >.dropdown-menu {
+        border-radius: 0;
+        background-color: #242424;
+
+
+        .dropdown-item {
             color: white;
 
             &:hover {
                 transition: ease-in-out .2s all;
-                color: #dbb042 !important;
+                color: #242424 !important;
             }
-        }
-
-        >.dropdown-menu {
-            border-radius: 0;
-            background-color: #242424;
-
-
-            .dropdown-item {
-                color: white;
-
-                &:hover {
-                    transition: ease-in-out .2s all;
-                    color: #242424 !important;
-                }
-                &:focus{
-                    background-color: #dbb042;
-                    color: #242424;
-                }
+            &:focus{
+                background-color: #dbb042;
+                color: #242424;
             }
         }
     }
