--- a/barber-shop-ui/src/app/Views/booking-handler/booking-handler.component.html
+++ b/barber-shop-ui/src/app/Views/booking-handler/booking-handler.component.html
@@ -1,7 +1,7 @@
-<div class="container p-3">
+<div class="container">
     <div class="row justify-content-center">
-        <div class="col-12 col-lg-8 p-4 column">
-            <mat-stepper class="stepper" [linear]="!bookingForm.value.time" [orientation]="'horizontal'" #stepper>
+        <div class="col-12 col-lg-8 p-4 column ">
+            <mat-stepper class="stepper" [linear]="!bookingForm.value.time" [orientation]="'vertical'" #stepper>
                 <mat-step [stepControl]="bookingForm">
                     <form [formGroup]="bookingForm">
                         <ng-template matStepLabel>dia e horário</ng-template>
