--- a/barber-shop-ui/src/app/Views/Shared/admin-navbar/admin-navbar.component.scss
+++ b/barber-shop-ui/src/app/Views/Shared/admin-navbar/admin-navbar.component.scss
@@ -1,6 +1,6 @@
-.navbar {
+.container-fluid {
     background-color: #0f0f0f;
-    >a {
+    a {
         text-decoration: none;
         font-family: "Bebas Neue", serif;
         font-size: 25px;
@@ -8,21 +8,21 @@
         color: white;
     }
 
-    >a:hover {
+    a:hover {
         transition: ease-in-out .2s all;
         color: #dbb042 !important;
     }
 
-    >img {
+    img {
         @media (max-width: 768px) {
             width: 100%;
             height: 80px;
         }
     }
 
-    >.dropdown {
+    .dropdown {
 
-        >.dropdown-toggle {
+        .dropdown-toggle {
             font-family: "Bebas Neue", serif;
             font-size: 25px;
             letter-spacing: .1rem;
@@ -37,7 +37,7 @@
             }
         }
 
-        >.dropdown-menu {
+        .dropdown-menu {
             border-radius: 0;
             background-color: #242424;
 
